--- a/admin/assets/languages/es.json
+++ b/admin/assets/languages/es.json
@@ -3,6 +3,7 @@
     "DASHBOARD": "Inicio",
     "CLIENTES": "Clientes",
     "BANNERS": "Banners",
+    "SECCION": "Secciones",
     "MANTENIMIENTO": "Mantenimiento",
     "IDIOMAS": "Idiomas",
     "SITIOS": "Sitios",
