--- a/admin/assets/languages/en.json
+++ b/admin/assets/languages/en.json
@@ -3,6 +3,8 @@
     "DASHBOARD": "Dashboard",
     "CLIENTES": "Customers",
     "BANNERS": "Banners",
+    "SECCION": "Seccions",
+    "BLOG": "Blog",
     "MANTENIMIENTO": "Maintenance",
     "IDIOMAS": "Languages",
     "SITIOS": "Places",
