--- a/admin/assets/languages/es.json
+++ b/admin/assets/languages/es.json
@@ -4,6 +4,7 @@
     "CLIENTES": "Clientes",
     "BANNERS": "Banners",
     "SECCION": "Secciones",
+    "BLOG": "Blog",
     "MANTENIMIENTO": "Mantenimiento",
     "IDIOMAS": "Idiomas",
     "SITIOS": "Sitios",
