--- a/admin/assets/languages/es.json
+++ b/admin/assets/languages/es.json
@@ -12,7 +12,10 @@
     "SEGURIDAD": "Seguridad",
     "USUARIOS": "Usuarios",
     "GRUPOS": "Grupos",
-    "ROLES": "Roles"
+    "ROLES": "Roles",
+    "PERFIL": "Mi Perfil",
+    "GALERIA": "Mi Galeria",
+    "DESCARGAR": "Descargar imagenes"
   },
   "Form": {
     "PREVIOUS":"Atras",
