Avances galeria de compra

--- a/admin/assets/languages/es.json
+++ b/admin/assets/languages/es.json
@@ -15,7 +15,7 @@
     "ROLES": "Roles",
     "PERFIL": "Mi Perfil",
     "GALERIA": "Mi Galeria",
-    "DESCARGAR": "Descargar imagenes"
+    "DESCARGAR": "Tienda"
   },
   "Form": {
     "PREVIOUS":"Atras",
