--- a/admin/assets/languages/en.json
+++ b/admin/assets/languages/en.json
@@ -15,7 +15,7 @@
     "ROLES": "Roles",
     "PERFIL": "My Profile",
     "GALERIA": "My Galery",
-    "DESCARGAR": "Downloads"
+    "DESCARGAR": "Store"
   },
   "Form": {
     "PREVIOUS":"Back",
