--- a/admin/assets/languages/es.json
+++ b/admin/assets/languages/es.json
@@ -9,6 +9,8 @@
     "IDIOMAS": "Idiomas",
     "SITIOS": "Sitios",
     "CONFIG": "Configuración",
+    "WEB": "Sitio Web",
+    "DESCUENTO": "Descuento",
     "SEGURIDAD": "Seguridad",
     "USUARIOS": "Usuarios",
     "GRUPOS": "Grupos",
