--- a/admin/assets/languages/en.json
+++ b/admin/assets/languages/en.json
@@ -9,6 +9,8 @@
     "IDIOMAS": "Languages",
     "SITIOS": "Places",
     "CONFIG": "Configuration",
+    "WEB": "Website",
+    "DESCUENTO": "Discount",
     "SEGURIDAD": "Security",
     "USUARIOS": "Users",
     "GRUPOS": "Groups",
@@ -23,4 +25,3 @@
     "SAVE":"Save"
   }
 }
-
