--- a/admin/assets/languages/en.json
+++ b/admin/assets/languages/en.json
@@ -11,6 +11,7 @@
     "CONFIG": "Configuration",
     "WEB": "Website",
     "DESCUENTO": "Discount",
+    "EMAILS": "Emails",
     "SEGURIDAD": "Security",
     "USUARIOS": "Users",
     "GRUPOS": "Groups",
