--- a/admin/assets/languages/es.json
+++ b/admin/assets/languages/es.json
@@ -11,6 +11,7 @@
     "CONFIG": "Configuración",
     "WEB": "Sitio Web",
     "DESCUENTO": "Descuento",
+    "EMAILS": "Emails",
     "SEGURIDAD": "Seguridad",
     "USUARIOS": "Usuarios",
     "GRUPOS": "Grupos",
