--- a/admin/assets/languages/ru.json
+++ b/admin/assets/languages/ru.json
@@ -26,7 +26,11 @@
     "SAVE":"Сохранить"
   },
   "Text": {
-    "MONEDERO":"Кошелек",
-    "LOGOUT":"Выйти"
+    "MONEDERO":"Доступные средства",
+    "LOGOUT":"Выйти",
+    "SEL_PAQUETE":"Выберите пакет",
+    "SEL_PRODUCTO":"Выбрать продукты",
+    "TODOS":"все",
+    "DESCARGAR":"скачать"
   }
 }
