--- a/admin/assets/languages/de.json
+++ b/admin/assets/languages/de.json
@@ -34,8 +34,10 @@
     "LOGOUT":"Ausloggen",
     "REGRESAR":"Rückkehr",
     "MERCHANDISING":"Merchandising",
+    "DESCRIPCION":"Beschreibung",
     "COLOR":"Farbe",
     "CANTIDAD":"Menge",
+    "GENERO":"Geschlecht",
     "HOMBRE":"Mann",
     "MUJER":"Frau",
     "SELECCIONAR":"Wählen Sie ein Bild",
