--- a/admin/assets/languages/en.json
+++ b/admin/assets/languages/en.json
@@ -34,8 +34,10 @@
     "LOGOUT":"Log Out",
     "REGRESAR":"To Return",
     "MERCHANDISING":"Merchandising",
+    "DESCRIPCION":"Description",
     "COLOR":"Color",
     "CANTIDAD":"Quantity",
+    "GENERO":"Gender",
     "HOMBRE":"Man",
     "MUJER":"Woman",
     "SELECCIONAR":"Select a picture",
