--- a/admin/assets/languages/es.json
+++ b/admin/assets/languages/es.json
@@ -34,8 +34,10 @@
     "LOGOUT":"Cerrar Sesión",
     "REGRESAR":"Regresar",
     "MERCHANDISING":"Merchandising",
+    "DESCRIPCION":"Descripción",
     "COLOR":"Color",
     "CANTIDAD":"Cantidad",
+    "GENERO":"Género",
     "HOMBRE":"Hombre",
     "MUJER":"Mujer",
     "SELECCIONAR":"Seleccione una fotografía",
