--- a/admin/assets/languages/fr.json
+++ b/admin/assets/languages/fr.json
@@ -34,8 +34,10 @@
     "LOGOUT":"Connectez - Out",
     "REGRESAR":"Retour",
     "MERCHANDISING":"Merchandising",
+    "DESCRIPCION":"Description",
     "COLOR":"Couleur",
     "CANTIDAD":"Quantité",
+    "GENERO":"Sexe",
     "HOMBRE":"Homme",
     "MUJER":"Femme",
     "SELECCIONAR":"Sélectionnez une photo",
