--- a/admin/assets/languages/ru.json
+++ b/admin/assets/languages/ru.json
@@ -34,8 +34,10 @@
     "LOGOUT":"Выйти",
     "REGRESAR":" возвращение",
     "MERCHANDISING":"Мерчендайзинг",
+    "DESCRIPCION":"Описание",
     "COLOR":"Цвет",
     "CANTIDAD":"количество",
+    "GENERO":"Пол",
     "HOMBRE":"человек ",
     "MUJER":"женщина ",
     "SELECCIONAR":"Выберите картинку",
