--- a/admin/assets/languages/de.json
+++ b/admin/assets/languages/de.json
@@ -41,6 +41,8 @@
     "HOMBRE":"Mann",
     "MUJER":"Frau",
     "SELECCIONAR":"Wählen Sie ein Bild",
+    "SELECCIONE":"Wähle",
+    "FOTOGRAFIAS":"bilder aus",
     "PRECIO":"Preis",
     "TOTAL":"Gesamt",
     "CESTA":"In den Warenkorb",
