--- a/admin/assets/languages/es.json
+++ b/admin/assets/languages/es.json
@@ -41,6 +41,8 @@
     "HOMBRE":"Hombre",
     "MUJER":"Mujer",
     "SELECCIONAR":"Seleccione una fotografía",
+    "SELECCIONE":"Seleccione",
+    "FOTOGRAFIAS":"fotografías",
     "PRECIO":"Precio",
     "TOTAL":"Total",
     "CESTA":"Añadir a la cesta",
