--- a/admin/assets/languages/fr.json
+++ b/admin/assets/languages/fr.json
@@ -41,6 +41,8 @@
     "HOMBRE":"Homme",
     "MUJER":"Femme",
     "SELECCIONAR":"Sélectionnez une photo",
+    "SELECCIONE":"Sélectionnez",
+    "FOTOGRAFIAS":"photos",
     "PRECIO":"Prix",
     "TOTAL":"Total",
     "CESTA":"Ajouter au panier",
