--- a/admin/assets/languages/ru.json
+++ b/admin/assets/languages/ru.json
@@ -40,7 +40,9 @@
     "GENERO":"Пол",
     "HOMBRE":"человек ",
     "MUJER":"женщина ",
-    "SELECCIONAR":"Выберите картинку",
+    "SELECCIONAR":"Выберите фотографию",
+    "SELECCIONE":"Выберите",
+    "FOTOGRAFIAS":"фотографий",
     "PRECIO":"Цена",
     "TOTAL":"общий",
     "CESTA":"Добавить в корзину",
