--- a/admin/assets/languages/es.json
+++ b/admin/assets/languages/es.json
@@ -21,6 +21,7 @@
     "GALERIA": "Mi Galeria",
     "PERFIL": "Mi Perfil",
     "PRODUCTO": "Producto",
+    "MEDIDA": "Medida",
     "PEDIDOS": "Pedidos"
   },
   "Form": {
