--- a/admin/assets/languages/es.json
+++ b/admin/assets/languages/es.json
@@ -6,7 +6,7 @@
     "BANNERS": "Banners",
     "SECCION": "Secciones",
     "BLOG": "Blog",
-    "MANTENIMIENTO": "Mantenimiento",
+    "MANTENIMIENTO": "Merchandising",
     "IDIOMAS": "Idiomas",
     "EXCURSION": "Excursiones",
     "CONFIG": "Configuración",
