--- a/admin/assets/languages/en.json
+++ b/admin/assets/languages/en.json
@@ -30,7 +30,7 @@
   },
   "Text": {
     "MONEDERO":"Available balance",
-    "SELECCIONADAS":"Selected",
+    "SELECCIONADAS":"Items",
     "LOGOUT":"Log Out",
     "REGRESAR":"To Return",
     "MERCHANDISING":"Merchandising",
