--- a/admin/assets/languages/es.json
+++ b/admin/assets/languages/es.json
@@ -31,7 +31,7 @@
   },
   "Text": {
     "MONEDERO":"Saldo",
-    "SELECCIONADAS":"Seleccionadas",
+    "SELECCIONADAS":"Items",
     "LOGOUT":"Cerrar Sesión",
     "REGRESAR":"Regresar",
     "MERCHANDISING":"Merchandising",
